# RustScan

./: .gitignore  COMPREHENSIVE_VALIDATION_REPORT.md  Cargo.toml  Cross.toml  PR_DESCRIPTION.md  README.md  build.rs  contributing.Dockerfile  contributing.md
.github/workflows/: README.md  build.yml  ci.yml  docs.yml  release.yml  test.yml
benches/: benchmark_portscan.rs
docs/: arm-support.md
src/: address.rs  input.rs  lib.rs  main.rs  port_strategy.rs  site_scan.rs  tui.rs
src/benchmark/: mod.rs
src/port_strategy/: mod.rs  range_iterator.rs
src/scanner/: mod.rs  socket_iterator.rs
src/scripts/: mod.rs
tests/: cross_config.rs  documentation_tests.rs  timelimits.rs
