[package]
name = "rustscan"
version = "2.4.1"
authors = ["Autumn <autumn@skerritt.blog>"]
edition = "2018"
description = "Faster Nmap Scanning with Rust"
homepage = "https://github.com/rustscan/rustscan"
repository = "https://github.com/rustscan/rustscan"
license = "GPL-3.0-only"
keywords = ["port", "scanning", "nmap"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "pictures/*",
    "rustscan-debbuilder/*",
]

[dependencies]
clap = { version = "4.5.41", features = ["derive", "wrap_help"] }
colored = "3.0.0"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
rlimit = "0.10.2"
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11.8"
indicatif = "0.17"
serde_json = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
anstream = "=0.6.19"
dirs = "6.0.0"
gcd = "2.0.1"
rand = "0.9.1"
colorful = "0.3.2"
ansi_term = "0.12.1"
toml = "0.9.0"
serde = "1.0.124"
serde_derive = "1.0.116"
cidr-utils = "0.6.1"
itertools = "0.14.0"
hickory-resolver = { version = "0.24.3", features = ["dns-over-rustls"] }
anyhow = "1.0.40"
text_placeholder = { version = "0.5", features = ["struct_context"] }
once_cell = "1.21.3"

[dev-dependencies]
parameterized = "2.0.0"
wait-timeout = "0.2"
criterion = { version = "0.6", features = ["html_reports"] }

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true
codegen-units = 1
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rustscan"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[lints.clippy]
# Pedantic rules for high code quality
pedantic = { level = "warn", priority = -1 }
# Additional rules for better code
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Performance lints
perf = { level = "warn", priority = -1 }
# Style improvements
style = { level = "warn", priority = -1 }
# Suspicious patterns
suspicious = { level = "warn", priority = -1 }
# Complexity warnings
complexity = { level = "warn", priority = -1 }
# Correctness (these are deny by default but let's be explicit)
correctness = { level = "deny", priority = -1 }

# Allow some pedantic lints that might be too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[bench]]
name = "benchmark_portscan"
harness = false
