[package]
name = "rustscan"
version = "2.3.0"
authors = ["Autumn <autumn@skerritt.blog>"]
edition = "2018"
description = "Faster Nmap Scanning with Rust"
homepage = "https://github.com/rustscan/rustscan"
repository = "https://github.com/rustscan/rustscan"
license = "MIT"
keywords = ["port", "scanning", "nmap"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "pictures/*",
    "rustscan-debbuilder/*",
]

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "fs", "macros"] }
tokio-par-stream = "0.1.1"
clap = { version = "4.5.9", features = ["derive", "wrap_help"] }
colored = "3.0.0"
futures-lite = "2.6.1"
futures-util = "0.3.31"
rlimit = "0.10.2"
log = "0.4.29"
env_logger = "0.11.3"
anstream = "=0.6.14"
dirs = "6.0.0"
gcd = "2.0.1"
rand = "0.9.2"
colorful = "0.2.1"
ansi_term = "0.12.1"
toml = "0.8.23"
serde = { version = "1.0.204", features = ["derive"] }
cidr-utils = "0.6.1"
itertools = "0.14.0"
hickory-resolver = { version = "0.24.4", features = ["dns-over-rustls"] }
anyhow = "1.0.100"
subprocess = "0.2.6"
text_placeholder = { version = "0.5", features = ["struct_context"] }
either = "1.15.0"
blackrock2 = "0.1.2"

[dev-dependencies]
parameterized = "2.0.0"
wait-timeout = "0.2"

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rustscan"
path = "src/main.rs"
